adding solutions
